[C-593] Fix spacing between playlists

--- a/public/styles/careers.scss
+++ b/public/styles/careers.scss
@@ -130,7 +130,7 @@
     margin-bottom: 48px;
   }
 
-  @media screen and (max-width: 1019px) {
+  @media screen and (max-width: 400px) {
     #working-at .row.two-columns .column {
       height: 400px;
     }
